--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!--Meta tag OG-->
+    <meta property="og:title" content="Pokemon" />
+    <meta property="og:description" content="Um app de card de pekemon" />
+    <meta property="og:image" content="https://meusite.vercel.app/imagem-preview.png" />
+    <meta property="og:url" content="https://meusite.vercel.app" />
+    <meta name="og:site_name" content="CardPokemo" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
