alterado link + img gif

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!--Meta tag OG-->
     <meta property="og:title" content="Pokemon" />
     <meta property="og:description" content="Um app de card de pekemon" />
-    <meta property="og:image" content="https://meusite.vercel.app/imagem-preview.png" />
-    <meta property="og:url" content="https://meusite.vercel.app" />
+    <meta property="og:image" content="https://projeto-pokemon-gules.vercel.app/src/imagens/pikachu-cute.gif" />
+    <meta property="og:url" content="https://projeto-pokemon-gules.vercel.app/" />
     <meta name="og:site_name" content="CardPokemo" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
