--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <img src="./src/imagens/blastoise.gif" alt="Blastoise" class="gif" />
                 <ul class="tipos">
-                    <li class="tipo água">Água</li>
+                    <li class="tipo agua">Água</li>
                 </ul>
                 <p class="descricao">Ele esmaga seu inimigo sob seu corpo pesado para causar desmaios. Em uma pitada, ele se retirará dentro de sua concha.</p>
             </li>
