--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:description" content="Um app de cards de Pokémon" />
     <meta property="og:image" content="https://projeto-pokemon-gules.vercel.app/src/imagens/pikachu-cute.gif" />
     <meta property="og:url" content="https://projeto-pokemon-gules.vercel.app/" />
-    <meta name="og:site_name" content="CardPokemon" />
-    <meta name="description" content="Explore os cards de Pokémon com imagens, tipos e curiosidades." />
+    <meta property="og:site_name" content="CardPokemon" />
+    
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
