--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 <img src="./src/imagens/charizard.gif" alt="Charizard" class="gif" />
                 <ul class="tipos">
                     <li class="tipo fogo">Fogo</li>
+                    <li class="tipo voador">Voador</li>
                 </ul>
                 <p class="descricao">Ele cospe fogo que é quente o suficiente para derreter pedregulhos. Pode causar incêndios florestais soprando chamas.</p>
             </li>
@@ -164,12 +165,25 @@
 
             <li class="cartao-pokemon">
                 <div class="informacoes">
-                    <span>Butterfree</span>
+                    <span>Metapod</span>
                     <span>#011</span>
+                </div>
+                <img src="./src/imagens/Novo-metapod.gif" alt="Caterpie" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo inseto">Inseto</li>
+                </ul>
+                <p class="descricao">Ele aguarda o momento de evoluir. Nesse estágio, ele só pode endurecer, então permanece imóvel para evitar ataques.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Butterfree</span>
+                    <span>#012</span>
                 </div>
                 <img src="./src/imagens/Butterfree.gif" alt="Butterfree" class="gif" />
                 <ul class="tipos">
                     <li class="tipo inseto">Inseto</li>
+                    <li class="tipo voador">Voador</li>
                 </ul>
                 <p class="descricao">É conhecido por sua habilidade de voar e liberar pó tóxico para afastar inimigos.</p>
             </li>
@@ -177,11 +191,12 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Beedrill</span>
-                    <span>#012</span>
+                    <span>#013</span>
                 </div>
                 <img src="./src/imagens/Beedrill.gif" alt="Beedrill" class="gif" />
                 <ul class="tipos">
                     <li class="tipo inseto">Inseto</li>
+                    <li class="tipo voador">Voador</li>
                 </ul>
                 <p class="descricao">Suas picadas são muito perigosas e ele pode atacar rapidamente em grupo.</p>
             </li>
@@ -189,7 +204,7 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Kakuna</span>
-                    <span>#013</span>
+                    <span>#014</span>
                 </div>
                 <img src="./src/imagens/alphan-panthom9te5d-pokémon.gif" alt="Kakuna" class="gif" />
                 <ul class="tipos">
@@ -200,8 +215,8 @@
 
             <li class="cartao-pokemon">
                 <div class="informacoes">
-                    <span>Weedle</span>
-                    <span>#014</span>
+                    <span>Pikachu</span>
+                    <span>#015</span>
                 </div>
 
                 <img src="./src/imagens/pikachu-cute.gif" alt="Pikachu" class="gif">
@@ -212,6 +227,74 @@
                 </ul>
 
                 <p class="descricao">Quando está com raiva, descarrega imediatamente a energia armazenada nas bolsas de suas bochechas.</p>
+
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Arbok</span>
+                    <span>#016</span>
+                </div>
+
+                <img src="./src/imagens/arbok.gif" alt="Pikachu" class="gif">
+
+                <ul class="tipos">
+                    <li class="tipo veneno">Tóxico</li>
+
+                </ul>
+
+                <p class="descricao">O padrão em sua barriga parece ser um rosto assustador. Inimigos fracos fugirão ao avistá-lo.</p>
+
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Fearow</span>
+                    <span>#017</span>
+                </div>
+
+                <img src="./src/imagens/fearow.gif" alt="Pikachu" class="gif">
+
+                <ul class="tipos">
+                    <li class="tipo normal">Normal</li>
+                    <li class="tipo voador">Voador</li>
+                </ul>
+
+                <p class="descricao">Um Pokémon que remonta a muitos anos. Se pressente perigo, voa alto e para longe, instantaneamente.</p>
+
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Ratata</span>
+                    <span>#018</span>
+                </div>
+
+                <img src="./src/imagens/Ratata.gif" alt="Pikachu" class="gif">
+
+                <ul class="tipos">
+                    <li class="tipo normal">Normal</li>
+
+                </ul>
+
+                <p class="descricao">Mastiga qualquer coisa com suas presas. Se você vir um, pode ter certeza de que outros 40 vivem na área.</p>
+
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Raticate</span>
+                    <span>#019</span>
+                </div>
+
+                <img src="./src/imagens/raticate.gif" alt="Pikachu" class="gif">
+
+                <ul class="tipos">
+                    <li class="tipo normal">Normal</li>
+
+                </ul>
+
+                <p class="descricao">Suas patas traseiras são palmadas. Elas funcionam como nadadeiras, permitindo que ele nade em rios e caçar presas.</p>
 
             </li>
         </ul>
