--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <img src="./src/imagens/pikachu-cute.gif" alt="Pikachu" class="gif">
 
                 <ul class="tipos">
-                    <li class="tipo eletrico">Eletrico</li>
+                    <li class="tipo eletrico">Elétrico</li>
 
                 </ul>
 
